fix: restore desktop image, reduce whitespace on missions page

--- a/scss/components/blog/highlight-article.scss
+++ b/scss/components/blog/highlight-article.scss
@@ -5,7 +5,7 @@
   align-items: flex-start;
   width: 100%;
   margin-bottom: 10rem;
-  padding-top: var(--header-height);
+  padding-top: 2rem;  // ← was var(--header-height), blog-page now handles clearance
 
   &__info {
     width: 49%;
