--- a/scss/pages/blog.scss
+++ b/scss/pages/blog.scss
@@ -1,9 +1,9 @@
 .blog-page,
 .events-page {
-  padding: 20rem 4.8rem 12rem;
+  padding: 20rem 4.8rem 20rem;
 
   @include respond(tab-land) {
-    padding: 14rem 3rem 8rem;
+    padding: 8rem 3rem 8rem;
   }
 
   @include respond(phone) {
